😘😇 Checkpoint ./index.html:58483452/207:58483462/410 ./style.css:58483452/101 ./.glitch-assets:58483462/388

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <link rel="icon" href="https://glitch.com/favicon.ico" />
     <title>Clinica medica!</title>
     <link rel="stylesheet" href="/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Montserrat"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <script src="/script.js" defer></script>
   </head>
   <body>
@@ -56,6 +53,12 @@
           src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/medico3.png?v=1697158015966"
         />
         <h2>Dr.Jorge</h2>
+      </div>
+      <div class="profissional">
+        <img
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/psicologa.png?v=1697159371412"
+        />
+        <h2>Dra.Kelly</h2>
       </div>
     </conteiner>
     <!--footer-->
