🏙🐽 Checkpoint ./index.html:58483462/930 ./style.css:58483452/58:58483462/83:58517880/74 ./cadastro.html:58483452/428 ./.glitch-assets:58483452/968 ./Solicitar.html:58483452/400

--- a/index.html
+++ b/index.html
@@ -41,24 +41,32 @@
           src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/M%C3%A9dico1.png?v=1697158027177"
         />
         <h2>Dr.Bruno</h2>
+        <h3>Médico clínico geral</h3>
+        <!--<p>Na clínica, desempenha um papel fundamental no cuidado de pacientes de todas as idades.</p>-->
       </div>
       <div class="profissional">
         <img
           src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/m%C3%A9dica2.png?v=1697158022162"
         />
         <h2>Dra.Raquel</h2>
+        <h3>Médica odontológica</h3>
+
       </div>
       <div class="profissional">
         <img
           src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/medico3.png?v=1697158015966"
         />
         <h2>Dr.Jorge</h2>
+        <h3>Médico Oftalmologista</h3>
+
       </div>
       <div class="profissional">
         <img
           src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/psicologa.png?v=1697159371412"
         />
         <h2>Dra.Kelly</h2>
+        <h3>Psicologa</h3>
+
       </div>
     </conteiner>
     <!--footer-->
