👳🎺 Checkpoint ./style.css:58483452/2434 ./index.html:58483452/2135

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
 
       </div>
     </conteiner>
+    <h1>Nossas especializações</h1>
+    <conteiner> 
+      
+    </conteiner>
     <!--footer-->
     <footer class="footer">
       <div class="container">
