💎😀 Checkpoint ./index.html:58483452/1149 ./style.css:58483452/1176 ./.glitch-assets:58483452/1507

--- a/index.html
+++ b/index.html
@@ -70,6 +70,34 @@
       </div>
     </conteiner>
     <h1>Nossas especializações</h1>
+    <conteiner>
+      <conteiner class="especializações">
+        <div class="quadrado-espec">
+            <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/oftamologia.png?v=1697165297703" alt="Imagem 1">
+            <h2>Oftamologia</h2>
+            <p>Texto descritivo para o quadrado 1.</p>
+            <button>Botão 1</button>
+        </div>
+        <div class="quadrado-espec">
+            <img src="fisioterapia.png" alt="Imagem 2">
+            <h2>Fisioterapia</h2>
+            <p>Texto descritivo para o quadrado 2.</p>
+            <button>Botão 2</button>
+        </div>
+        <div class="quadrado-espec">
+            <img src="odontologia.png" alt="Imagem 3">
+            <h2>Odontologia</h2>
+            <p>Texto descritivo para o quadrado 3.</p>
+            <button>Botão 3</button>
+        </div>
+        <div class="quadrado-espec">
+            <img src="cardiologia.png" alt="Imagem 4">
+            <h2>Cardiologia</h2>
+            <p>Texto descritivo para o quadrado 4.</p>
+            <button>Botão 4</button>
+        </div>
+    </div>
+    </conteiner>
     
     <!--footer-->
     <footer class="footer">
