--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
       <conteiner class="especializações">
         <div class="quadrado-espec">
             <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/oftamologia.png?v=1697165297703" alt="Imagem 1">
-            <h2 class="h2.esp">Oftamologia</h2>
+            <h4>Oftamologia</h4>
             <button>Botão 1</button>
         </div>
         <div class="quadrado-espec">
             <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/fisioterapia.png?v=1697165291367" alt="Imagem 2">
-            <h2 class="h2.esp">Fisioterapia</h2>
+            <h4>Fisioterapia</h4>
             <button>Botão 2</button>
         </div>
         <div class="quadrado-espec">
             <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/odontologia.png?v=1697165294039" alt="Imagem 3">
-            <h2>Odontologia</h2>
+            <h4>Odontologia</h4>
             <button>Botão 3</button>
         </div>
         <div class="quadrado-espec">
             <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/cardiologia.png?v=1697165289696" alt="Imagem 4">
-            <h2 class="h2.esp">Cardiologia</h2>
+            <h4>Cardiologia</h4>
             <button>Botão 4</button>
         </div>
     </div>
