👩‍👩‍👦🎀 Checkpoint ./style.css:58483452/75 ./index.html:58483452/98

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       />
     </conteiner>
 
-    <h1>Nossos profissionais</h1>
+    <h1>Profissionais</h1>
     <conteiner class="profissionais">
       <div class="profissional">
         <img
@@ -69,28 +69,28 @@
 
       </div>
     </conteiner>
-    <h1>Nossas especializações</h1>
+    <h1>Especializações</h1>
     <conteiner>
       <conteiner class="especializações">
         <div class="quadrado-espec">
             <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/oftamologia.png?v=1697165297703" alt="Imagem 1">
             <h4>Oftamologia</h4>
-            <button>Botão 1</button>
+            <button>Saiba mais</button>
         </div>
         <div class="quadrado-espec">
             <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/fisioterapia.png?v=1697165291367" alt="Imagem 2">
             <h4>Fisioterapia</h4>
-            <button>Botão 2</button>
+            <button>Saiba mais</button>
         </div>
         <div class="quadrado-espec">
             <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/odontologia.png?v=1697165294039" alt="Imagem 3">
             <h4>Odontologia</h4>
-            <button>Botão 3</button>
+            <button>Saiba mais</button>
         </div>
         <div class="quadrado-espec">
             <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/cardiologia.png?v=1697165289696" alt="Imagem 4">
             <h4>Cardiologia</h4>
-            <button>Botão 4</button>
+            <button>Saiba mais</button>
         </div>
     </div>
     </conteiner>
