--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--IMAGEM INICIAL-->
     <conteiner class="imagem-inicial">
       <img
-        src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/Novo%20Projeto%20(17).png?v=1697157514615"
+        src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/imagem.png?v=1697213613186"
       />
     </conteiner>
 
