--- a/SolicitarVacinas.html
+++ b/SolicitarVacinas.html
@@ -26,7 +26,7 @@
     <!--área de cadastro-->
     <div class="solicitar-conteiner">
       <div>
-        <h1>Solicitar atendimento</h1>
+        <h1>Solicitar Vacinas</h1>
       </div>
 
       <form>
@@ -48,7 +48,7 @@
           ><input type="datetime-local" name="identificador" />
         </section>
         <section>
-          <label>Descrição ou Sintomas:  </label
+          <label>Notas:  </label
           ><input type="text" name="identificador" />
         </section>
         <button class="enviar-button">Enviar</button>
