🏀✈️ Checkpoint ./index.html:58517880/22

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
                   alt="seta"
                 />
-                <a href="#">Cadastro</a>
+                <a href="#">Faça já seu Cadastro</a>
               </li>
             </ul>
           </div>
