--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
-    <title>Clinica medica!</title>
+    <title>Clinovare!</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <script src="/script.js" defer></script>
@@ -93,7 +93,7 @@
             <button>Saiba mais</button>
         </div>
     </div>
-    </conteiner>
+   </conteiner>
     
     <!--footer-->
     <footer class="footer">
@@ -113,7 +113,7 @@
             />
           </div>
 
-          <p>contato@clinica.com</p>
+          <p>sac@clinovare.com.br</p>
           <div class="email">
             <img
               src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/email.svg?v=1697118951223"
@@ -121,7 +121,7 @@
             />
           </div>
 
-          <p>(84) XXXX-XXXX</p>
+          <p>(84) 3850-8820</p>
           <div class="fecebook">
             <img
               src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/facebook.svg?v=1697118947458"
@@ -185,7 +185,7 @@
                   src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
                   alt="seta"
                 />
-                <a href="#">Faça já seu Cadastro</a>
+                <a href="cadastro.html">Seja nosso cliente </a>
               </li>
             </ul>
           </div>
