🍓🌘 Checkpoint ./cadastro.html:58517880/57 ./login.html:58517880/57

--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@
             />
           </div>
 
-          <p>contato@clinica.com</p>
+          <p>sac@clinovare.com.br</p>
           <div class="email">
             <img
               src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/email.svg?v=1697118951223"
@@ -91,7 +91,7 @@
             />
           </div>
 
-          <p>(84) XXXX-XXXX</p>
+          <p>(84) 3850-8820</p>
           <div class="fecebook">
             <img
               src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/facebook.svg?v=1697118947458"
