🚴⛹ Checkpoint ./.glitch-assets:58517880/387 ./index.html:58517880/674 ./style.css:58517880/1335

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h4>Cardiologia</h4>
             <button>Saiba mais</button>
         </div>
-    </div>
+      </conteiner>
    </conteiner>
     
     <!--footer-->
