🙇👣 Checkpoint ./style.css:58483462/16512:58517880/4744 ./index.html:58483462/8 ./SolicitarVacinas.html:58483462/474

--- a/SolicitarVacinas.html
+++ b/SolicitarVacinas.html
@@ -43,6 +43,18 @@
         <section>
           <label>CPF ou RG: </label><input type="text" name="identificador" />
         </section>
+        
+        <section>
+          <label>Tipo de vacina </label>
+          <select>
+            <option>H1N1</option>
+            <option>Covid-19</option>
+            <option>HPV</option>
+            <option>Tétano</option>
+            <option></option>
+          </select>
+        </section>
+        
         <section>
           <label>Data requerida: </label
           ><input type="datetime-local" name="identificador" />
