--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </conteiner>
     <h1>Especializações</h1>
     <conteiner>
-      <conteiner class="especializações">
+      <conteiner class="especializacoes">
         <div class="quadrado-espec">
             <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/oftamologia.png?v=1697165297703" alt="Imagem 1">
             <h4>Oftamologia</h4>
