🌂🍛 Checkpoint ./style.css:58483462/113:58517880/3975 ./SolicitarVacinas.html:58483462/5 ./Sobre.html:58483462/8909 ./.glitch-assets:58483462/381

--- a/SolicitarVacinas.html
+++ b/SolicitarVacinas.html
@@ -51,7 +51,7 @@
             <option>Covid-19</option>
             <option>HPV</option>
             <option>Tétano</option>
-            <option></option>
+            <option>BCG</option>
           </select>
         </section>
         
