📌🚅 Checkpoint ./index.html:58517880/1 ./style.css:58517880/613

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
 
         <div class="container">
-          <div class="footer-section">
+          <div class="footer-section1">
             <h2>Links Úteis</h2>
             <ul>
               <li>
