--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
       <nav class="nav-bar">
         <ul class="logo-text">
+          Clinica
         </ul>
       </nav>
       <div class="nomes-links">
