🔨🐇 Checkpoint ./SolicitarVacinas.html:58483462/969 ./Sobre.html:58483462/442 ./style.css:58483462/356

--- a/SolicitarVacinas.html
+++ b/SolicitarVacinas.html
@@ -52,6 +52,10 @@
             <option>HPV</option>
             <option>Tétano</option>
             <option>BCG</option>
+            <option>Febre Amarela</option>
+            <option>Poliomielite</option>
+            <option>Hepatite a</option>
+            <option>Hepatite B</option>
           </select>
         </section>
         
