🏅👦 Checkpoint ./style.css:58483462/54 ./Sobre.html:58483462/2701

--- a/Sobre.html
+++ b/Sobre.html
@@ -28,11 +28,16 @@
         Sobre nós
       </h1>
       <div class="texto">
-        <h3>
+        <div>
+          <h3>
           A Clinovare - Clínica Inovadora de Saúde é uma instituição médica que se destaca por oferecer os melhores serviços de saúde aos seus pacientes. Com um compromisso inabalável com a excelência, a Clinovare busca constantemente inovar e aprimorar os cuidados de saúde, proporcionando um ambiente acolhedor e profissionais altamente qualificados que colocam a saúde e o bem-estar dos pacientes em primeiro lugar.
-          <br>
+          </h3>
+
+          <h3>
           Uma das características distintivas da Clinovare é o seu corpo clínico de médicos, enfermeiros e outros profissionais de saúde, todos eles altamente capacitados e dedicados a fornecer o mais alto padrão de atendimento. A clínica investe em treinamento contínuo e atualização de sua equipe para garantir que os pacientes tenham acesso aos tratamentos e abordagens mais recentes e avançados
-        </h3>
+          </h3>
+        </div>
+        
         <section class="img-solicitar">
           <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/medicos.png?v=1697323339933">
         </section>
