🚝🌦 Checkpoint ./cadastro.html:58483456/282 ./style.css:58483456/461

--- a/cadastro.html
+++ b/cadastro.html
@@ -54,13 +54,15 @@
           />
         </section>
 
+        <section>
         <label for="genero">Gênero</label>
-        <select id="genero" name="genero" required>
-          <option value="masculino">Masculino</option>
-          <option value="feminino">Feminino</option>
-          <option value="outro">Outro</option>
-          <option value="naoinformado">Prefiro não informar</option>
-        </select>
+          <select id="genero" name="genero" required>
+            <option value="masculino">Masculino</option>
+            <option value="feminino">Feminino</option>
+            <option value="outro">Outro</option>
+            <option value="naoinformado">Prefiro não informar</option>
+          </select>
+        </section>
         <section>
           <label for="dataNascimento">Data de Nascimento</label>
           <input
@@ -79,7 +81,6 @@
               name="telefone"
               class="login-input"
               id="telefone-cadastro"
-              title="Insira um número de telefone válido."
               placeholder="Telefone"
               required
             />
