⚽️💫 Checkpoint ./style.css:58483456/1288 ./cadastro.html:58483456/224 ./login.html:58483456/128

--- a/cadastro.html
+++ b/cadastro.html
@@ -68,7 +68,6 @@
           <input
             type="date"
             id="dataNascimento"
-            class="login-input"
             name="dataNascimento"
             required
           />
@@ -79,7 +78,6 @@
               type="tel"
               pattern="/d*"
               name="telefone"
-              class="login-input"
               id="telefone-cadastro"
               placeholder="Telefone"
               required
@@ -90,7 +88,6 @@
               type="text"
               pattern="/d*"
               name="cpf"
-              class="login-input"
               id="cpf-cadastro"
               title="Por favor, insira apenas números"
               placeholder="CPF"
@@ -101,7 +98,6 @@
             type="email"
             name="email"
             id="email"
-            class="login-input"
             placeholder="E-mail"
             required
           />
@@ -111,7 +107,6 @@
             type="password"
             name="senha"
             id="digitar-senha"
-            class="login-input"
             placeholder="Senha"
             required
           />
@@ -121,7 +116,6 @@
             type="password"
             name="confirmarSenha"
             id="confirmar-senha"
-            class="login-input"
             placeholder="Confirmar"
             required
           />
@@ -230,7 +224,7 @@
                   src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
                   alt="seta"
                 />
-                <a href="#">Cadastro</a>
+                <a href="#">Seja nosso cliente</a>
               </li>
             </ul>
           </div>
