--- a/login.html
+++ b/login.html
@@ -38,7 +38,6 @@
             type="text"
             name="identificador"
             id="identificador"
-            class="login-input"
             placeholder="Identificador"
             required
           />
@@ -48,7 +47,6 @@
             type="password"
             name="senha"
             id="senha"
-            class="login-input"
             placeholder="Senha"
             required
           />
@@ -155,7 +153,7 @@
                   src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
                   alt="seta"
                 />
-                <a href="#">Cadastro</a>
+                <a href="#">Seja nosso cliente</a>
               </li>
             </ul>
           </div>
