--- a/cadastro.html
+++ b/cadastro.html
@@ -39,7 +39,6 @@
             name="nome"
             class="login-input"
             id="nome-cadastro"
-            placeholder="Nome"
             required
           />
         </section>
@@ -49,7 +48,6 @@
             name="sobrenome"
             class="login-input"
             id="sobrenome-cadastro"
-            placeholder="Sobrenome"
             required
           />
         </section>
@@ -79,7 +77,6 @@
               pattern="/d*"
               name="telefone"
               id="telefone-cadastro"
-              placeholder="Telefone"
               required
             />
           </section>
@@ -90,7 +87,6 @@
               name="cpf"
               id="cpf-cadastro"
               title="Por favor, insira apenas números"
-              placeholder="CPF"
               required
             />
           </section>
@@ -98,7 +94,6 @@
             type="email"
             name="email"
             id="email"
-            placeholder="E-mail"
             required
           />
         </section>
@@ -107,7 +102,6 @@
             type="password"
             name="senha"
             id="digitar-senha"
-            placeholder="Senha"
             required
           />
         </section>
@@ -116,12 +110,11 @@
             type="password"
             name="confirmarSenha"
             id="confirmar-senha"
-            placeholder="Confirmar"
             required
           />
         </section>
         <section>
-          <button type="submit" id="cadastro-button" class="enviar-button">Cadastre-se
+          <button type="submit" id="cadastro-button">Cadastre-se
           </button>
         </section>
       </form>
