🛰🐺 Checkpoint ./style.css:58483456/653 ./login.html:58483456/40 ./cadastro.html:58483456/268

--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
       </div>
 
       <form>
-        <div>
+        <section>
           <input
             type="text"
             name="identificador"
@@ -41,8 +41,8 @@
             placeholder="Identificador"
             required
           />
-        </div>
-        <div>
+        </section>
+        <section>
           <input
             type="password"
             name="senha"
@@ -50,7 +50,7 @@
             placeholder="Senha"
             required
           />
-        </div>
+        </section>
         <button class="enviar-button">Login</button>
       </form>
 
