👑🎻 Checkpoint ./cadastro.html:58517880/189

--- a/cadastro.html
+++ b/cadastro.html
@@ -43,12 +43,15 @@
 
         <section>
           <label for="genero">Gênero: </label>
+          <div class="select-container">
             <select id="genero" name="genero" required>
+              <option value="" disabled selected> Selecione</option>
             <option value="masculino">Masculino</option>
             <option value="feminino">Feminino</option>
             <option value="outro">Outro</option>
             <option value="naoinformado">Prefiro não informar</option>
           </select>
+          </div>
         </section>
         
         <section>
