🍕🎺 Checkpoint ./index.html:58517880/1119

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
                   alt="seta"
                 />
-                <a href="#">Sobre nós</a>
+                <a href="Sobre.html">Sobre Nós</a>
               </li>
               <li>
                 <img
@@ -177,7 +177,7 @@
                   src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
                   alt="seta"
                 />
-                <a href="#">Solicitar atendimento</a>
+                <a href="Solicitar.html">Solicitar Atendimento</a>
               </li>
               <li>
                 <img
@@ -185,7 +185,15 @@
                   src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
                   alt="seta"
                 />
-                <a href="cadastro.html">Seja nosso cliente </a>
+                <a href="SolicitarVacinas.html">Solicitar Vacina </a>
+              </li>
+              <li>
+                <img
+                  class="icone-img"
+                  src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
+                  alt="seta"
+                />
+                <a href="cadastro.html">Seja Nosso Cliente </a>
               </li>
             </ul>
           </div>
