--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
         </ul>
       </nav>
       <div class="nomes-links">
-        <a href="index.html">Clínica</a>
+        <div class="dropdown">
+        <a href="#">Clinica</a>
+          <div class="dropdown-content">
+            <a href="index.html"> Voltar a pagina inicial</a>
+            <a href="Sobre.html"> Sobre Nós</a>
+          </div>
+        </div>
         <a href="#">Especialidades</a>
+        <div class="dropdown">
         <a href="#">Serviços</a>
+          <div class="dropdown-content">
+            <a href="Solicitar.html"> Solicitar Atendimento</a>
+            <a href="SolicitarVacinas.html"> Solicitar Vacina</a>
+          </div>
+      </div>
         <a href="#">Contato</a>
         <a href="login.html">Login/Cadastro</a>
       </div>
