--- a/login.html
+++ b/login.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clínica - Login</title>
     <link rel="stylesheet" href="style.css" />
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+    />
   </head>
   <body>
     <!--navbar-->
@@ -19,7 +22,13 @@
       <div class="nomes-links">
         <a href="index.html">Clínica</a>
         <a href="#">Especialidades</a>
-        <a href="#">Serviços</a>
+        <div class="dropdown">
+          <a href="#">Serviços</a>
+          <div class="dropdown-content">
+            <a href="Solicitar.html"> Solicitar Atendimento</a>
+            <a href="SolicitarVacinas.html"> Solicitar Vacina</a>
+          </div>
+        </div>
         <a href="#">Contato</a>
         <a href="login.html">Login/Cadastro</a>
       </div>
