--- a/Sobre.html
+++ b/Sobre.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro - Clínica</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+    />
   </head>
   <body>
     <!--navbar-->
@@ -16,33 +19,49 @@
         </ul>
       </nav>
       <div class="nomes-links">
-        <a href="index.html">Clínica</a>
+        
         <a href="#">Especialidades</a>
-        <a href="#">Serviços</a>
+        <div class="dropdown">
+          <a href="#">Serviços</a>
+          <div class="dropdown-content">
+            <a href="Solicitar.html"> Solicitar Atendimento</a>
+            <a href="SolicitarVacinas.html"> Solicitar Vacina</a>
+          </div>
+        </div>
         <a href="#">Contato</a>
         <a href="login.html">Login/Cadastro</a>
       </div>
     </header>
     <conteiner>
-      <h1>
-        Sobre nós
-      </h1>
+      <h1>Sobre nós</h1>
       <div class="texto">
         <div>
           <h3>
-          A Clinovare - Clínica Inovadora de Saúde é uma instituição médica que se destaca por oferecer os melhores serviços de saúde aos seus pacientes. Com um compromisso inabalável com a excelência, a Clinovare busca constantemente inovar e aprimorar os cuidados de saúde, proporcionando um ambiente acolhedor e profissionais altamente qualificados que colocam a saúde e o bem-estar dos pacientes em primeiro lugar.
+            A Clinovare - Clínica Inovadora de Saúde é uma instituição médica
+            que se destaca por oferecer os melhores serviços de saúde aos seus
+            pacientes. Com um compromisso inabalável com a excelência, a
+            Clinovare busca constantemente inovar e aprimorar os cuidados de
+            saúde, proporcionando um ambiente acolhedor e profissionais
+            altamente qualificados que colocam a saúde e o bem-estar dos
+            pacientes em primeiro lugar.
           </h3>
 
           <h3>
-          Uma das características distintivas da Clinovare é o seu corpo clínico de médicos, enfermeiros e outros profissionais de saúde, todos eles altamente capacitados e dedicados a fornecer o mais alto padrão de atendimento. A clínica investe em treinamento contínuo e atualização de sua equipe para garantir que os pacientes tenham acesso aos tratamentos e abordagens mais recentes e avançados
+            Uma das características distintivas da Clinovare é o seu corpo
+            clínico de médicos, enfermeiros e outros profissionais de saúde,
+            todos eles altamente capacitados e dedicados a fornecer o mais alto
+            padrão de atendimento. A clínica investe em treinamento contínuo e
+            atualização de sua equipe para garantir que os pacientes tenham
+            acesso aos tratamentos e abordagens mais recentes e avançados
           </h3>
         </div>
-        
+
         <section class="img-solicitar">
-          <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/medicos.png?v=1697323339933">
+          <img
+            src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/medicos.png?v=1697323339933"
+          />
         </section>
       </div>
     </conteiner>
-  
   </body>
 </html>
