🌹💷 Checkpoint ./Sobre.html:58517880/5142 ./Solicitar.html:58517880/271 ./SolicitarVacinas.html:58517880/5855 ./cadastro.html:58517880/15344 ./index.html:58517880/15586 ./login.html:58517880/11539

--- a/Sobre.html
+++ b/Sobre.html
@@ -19,7 +19,13 @@
         </ul>
       </nav>
       <div class="nomes-links">
-        
+        <div class="dropdown">
+          <a href="#">Clinica</a>
+          <div class="dropdown-content">
+            <a href="index.html"> Voltar a pagina inicial</a>
+            <a href="Sobre.html"> Sobre Nós</a>
+          </div>
+        </div>
         <a href="#">Especialidades</a>
         <div class="dropdown">
           <a href="#">Serviços</a>
