--- a/login.html
+++ b/login.html
@@ -20,7 +20,13 @@
         </ul>
       </nav>
       <div class="nomes-links">
-        <a href="index.html">Clínica</a>
+        <div class="dropdown">
+          <a href="#">Clinica</a>
+          <div class="dropdown-content">
+            <a href="index.html"> Voltar a pagina inicial</a>
+            <a href="Sobre.html"> Sobre Nós</a>
+          </div>
+        </div>
         <a href="#">Especialidades</a>
         <div class="dropdown">
           <a href="#">Serviços</a>
@@ -130,14 +136,6 @@
                   alt="seta"
                 />
                 <a href="#">Sobre nós</a>
-              </li>
-              <li>
-                <img
-                  class="icone-img"
-                  src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
-                  alt="seta"
-                />
-                <a href="#">Serviços</a>
               </li>
 
               <li>
