--- a/SolicitarVacinas.html
+++ b/SolicitarVacinas.html
@@ -19,7 +19,13 @@
         </ul>
       </nav>
       <div class="nomes-links">
-        <a href="index.html">Clínica</a>
+        <div class="dropdown">
+          <a href="#">Clinica</a>
+          <div class="dropdown-content">
+            <a href="index.html"> Voltar a pagina inicial</a>
+            <a href="Sobre.html"> Sobre Nós</a>
+          </div>
+        </div>
         <a href="#">Especialidades</a>
         <div class="dropdown">
           <a href="#">Serviços</a>
