--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="icon" href="https://glitch.com/favicon.ico" />
     <title>Clinovare!</title>
     <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+    />
     <script src="/script.js" defer></script>
   </head>
   <body>
@@ -19,20 +22,19 @@
       </nav>
       <div class="nomes-links">
         <div class="dropdown">
-        <a href="#">Clinica</a>
+          <a href="#">Clinica</a>
           <div class="dropdown-content">
-            <a href="index.html"> Voltar a pagina inicial</a>
             <a href="Sobre.html"> Sobre Nós</a>
           </div>
         </div>
         <a href="#">Especialidades</a>
         <div class="dropdown">
-        <a href="#">Serviços</a>
+          <a href="#">Serviços</a>
           <div class="dropdown-content">
             <a href="Solicitar.html"> Solicitar Atendimento</a>
             <a href="SolicitarVacinas.html"> Solicitar Vacina</a>
           </div>
-      </div>
+        </div>
         <a href="#">Contato</a>
         <a href="login.html">Login/Cadastro</a>
       </div>
@@ -62,7 +64,6 @@
         />
         <h2>Dra. Raquel</h2>
         <h3>Médica odontológica</h3>
-
       </div>
       <div class="profissional">
         <img
@@ -70,7 +71,6 @@
         />
         <h2>Dr. Jorge</h2>
         <h3>Médico Oftalmologista</h3>
-
       </div>
       <div class="profissional">
         <img
@@ -78,35 +78,46 @@
         />
         <h2>Dra. Kelly</h2>
         <h3>Psicologa</h3>
-
       </div>
     </conteiner>
     <h1>Especializações</h1>
     <conteiner>
       <conteiner class="especializacoes">
         <div class="quadrado-espec">
-            <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/oftamologia.png?v=1697165297703" alt="Imagem 1">
-            <h4>Oftamologia</h4>
-            <button>Saiba mais</button>
+          <img
+            src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/oftamologia.png?v=1697165297703"
+            alt="Imagem 1"
+          />
+          <h4>Oftamologia</h4>
+          <button>Saiba mais</button>
         </div>
         <div class="quadrado-espec">
-            <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/fisioterapia.png?v=1697165291367" alt="Imagem 2">
-            <h4>Fisioterapia</h4>
-            <button>Saiba mais</button>
+          <img
+            src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/fisioterapia.png?v=1697165291367"
+            alt="Imagem 2"
+          />
+          <h4>Fisioterapia</h4>
+          <button>Saiba mais</button>
         </div>
         <div class="quadrado-espec">
-            <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/odontologia.png?v=1697165294039" alt="Imagem 3">
-            <h4>Odontologia</h4>
-            <button>Saiba mais</button>
+          <img
+            src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/odontologia.png?v=1697165294039"
+            alt="Imagem 3"
+          />
+          <h4>Odontologia</h4>
+          <button>Saiba mais</button>
         </div>
         <div class="quadrado-espec">
-            <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/cardiologia.png?v=1697165289696" alt="Imagem 4">
-            <h4>Cardiologia</h4>
-            <button>Saiba mais</button>
+          <img
+            src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/cardiologia.png?v=1697165289696"
+            alt="Imagem 4"
+          />
+          <h4>Cardiologia</h4>
+          <button>Saiba mais</button>
         </div>
       </conteiner>
-   </conteiner>
-    
+    </conteiner>
+
     <!--footer-->
     <footer class="footer">
       <div class="container">
@@ -165,14 +176,6 @@
                   alt="seta"
                 />
                 <a href="Sobre.html">Sobre Nós</a>
-              </li>
-              <li>
-                <img
-                  class="icone-img"
-                  src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
-                  alt="seta"
-                />
-                <a href="#">Serviços</a>
               </li>
 
               <li>
