🌝😂 Checkpoint ./style.css:58517880/1798 ./index.html:58517880/15538 ./script.js:58517880/730

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <ul class="logo-text">
-        </ul>
+        <ul class="logo-text"></ul>
       </nav>
       <div class="nomes-links">
         <div class="dropdown">
@@ -214,5 +213,11 @@
         </div>
       </div>
     </footer>
+    <div class="btn-top" id="btnTop">
+      <img
+        src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/arrow-up-square.svg?v=1697250793618"
+        alt="Seta para cima"
+      />
+    </div>
   </body>
 </html>
