📇🍖 Checkpoint ./cadastro.html:58483462/132 ./SolicitarVacinas.html:58483462/65 ./Solicitar.html:58483462/44 ./index.html:58483462/149

--- a/SolicitarVacinas.html
+++ b/SolicitarVacinas.html
@@ -14,8 +14,8 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <ul class="logo-text">
-        </ul>
+        <img src="">
+
       </nav>
       <div class="nomes-links">
         <div class="dropdown">
