--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <ul class="logo-text"></ul>
+        <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/Clinovare.png?v=1697541105765">
       </nav>
       <div class="nomes-links">
         <div class="dropdown">
