🕵🐔 Checkpoint ./.glitch-assets:58483462/412 ./index.html:58483462/195 ./style.css:58483462/729

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/Design%20sem%20nome%20(2).png?v=1697542630958">
+        <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697543049365">
       </nav>
       
       <div class="nomes-links">
