🚎🏋 Checkpoint ./style.css:58483462/1239 ./Sobre.html:58483462/304 ./Solicitar.html:58483462/260 ./SolicitarVacinas.html:58483462/349 ./cadastro.html:58483462/260 ./login.html:58483462/301 ./index.html:58483462/71

--- a/SolicitarVacinas.html
+++ b/SolicitarVacinas.html
@@ -14,8 +14,7 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <img src="">
-
+        <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697543049365">
       </nav>
       <div class="nomes-links">
         <div class="dropdown">
@@ -25,7 +24,6 @@
             <a href="Sobre.html"> Sobre Nós</a>
           </div>
         </div>
-        <a href="#">Especialidades</a>
         <div class="dropdown">
           <a href="#">Serviços</a>
           <div class="dropdown-content">
@@ -33,7 +31,6 @@
             <a href="SolicitarVacinas.html"> Solicitar Vacina</a>
           </div>
         </div>
-        <a href="#">Contato</a>
         <a href="login.html">Login/Cadastro</a>
       </div>
     </header>
