📡👱 Checkpoint ./style.css:58483462/732 ./Sobre.html:58483456/10 ./Solicitar.html:58483456/20 ./SolicitarVacinas.html:58483456/16 ./cadastro.html:58483456/20 ./login.html:58483456/4 ./index.html:58483456/28

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -18,9 +18,9 @@
       </nav>
       <div class="nomes-links">
           <div class="dropdown">
-        <a href="#">Clinica</a>
+        <a href="#">Clínica</a>
           <div class="dropdown-content">
-            <a href="index.html"> Voltar a pagina inicial</a>
+            <a href="index.html"> Voltar a página inicial</a>
             <a href="Sobre.html"> Sobre Nós</a>
           </div>
         </div>
@@ -37,7 +37,7 @@
     <!--área de cadastro-->
     <div class="solicitar-conteiner">
       <div>
-        <h1>Solicitar atendimento</h1>
+        <h1>Solicitar Atendimento</h1>
       </div>
 
       <form>
@@ -59,7 +59,7 @@
           ><input type="datetime-local" name="identificador" />
         </section>
         <section>
-          <label>Descrição ou Sintomas: </label
+          <label>Descrição ou sintomas: </label
           ><input type="text" name="identificador" />
         </section>
         <button class="enviar-button">Enviar</button>
