--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       
       <div class="nomes-links">
         <div class="dropdown">
-          <a href="#">Clinica</a>
+          <a href="#">Clínica</a>
           <div class="dropdown-content">
             <a href="Sobre.html"> Sobre Nós</a>
           </div>
@@ -52,7 +52,7 @@
           src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/M%C3%A9dico1.png?v=1697158027177"
         />
         <h2>Dr. Bruno</h2>
-        <h3>Médico clínico geral</h3>
+        <h3>Médico Clínico Geral</h3>
         <!--<p>Na clínica, desempenha um papel fundamental no cuidado de pacientes de todas as idades.</p>-->
       </div>
       <div class="profissional">
@@ -60,7 +60,7 @@
           src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/m%C3%A9dica2.png?v=1697158022162"
         />
         <h2>Dra. Raquel</h2>
-        <h3>Médica odontológica</h3>
+        <h3>Médica Odontológica</h3>
       </div>
       <div class="profissional">
         <img
@@ -74,7 +74,7 @@
           src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/psicologa.png?v=1697159371412"
         />
         <h2>Dra. Kelly</h2>
-        <h3>Psicologa</h3>
+        <h3>Psicóloga</h3>
       </div>
     </conteiner>
     <h1>Especializações</h1>
