--- a/SolicitarVacinas.html
+++ b/SolicitarVacinas.html
@@ -18,9 +18,9 @@
       </nav>
       <div class="nomes-links">
         <div class="dropdown">
-          <a href="#">Clinica</a>
+          <a href="#">Clínica</a>
           <div class="dropdown-content">
-            <a href="index.html"> Voltar a pagina inicial</a>
+            <a href="index.html"> Voltar a página inicial</a>
             <a href="Sobre.html"> Sobre Nós</a>
           </div>
         </div>
