--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <!--navbar-->
     <header>
       <nav class="nav-bar">
-        <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697543049365">
+        <img
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/logo.png?v=1697543049365"
+        />
       </nav>
-      
+
       <div class="nomes-links">
         <div class="dropdown">
           <a href="#">Clínica</a>
@@ -174,13 +176,12 @@
                 />
                 <a href="Sobre.html">Sobre Nós</a>
               </li>
-                <img
-                  class="icone-img"
-                  src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
-                  alt="seta"
-                />
-                <a href="Solicitar.html">Solicitar Atendimento</a>
-              </li>
+              <img
+                class="icone-img"
+                src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
+                alt="seta"
+              />
+              <a href="Solicitar.html">Solicitar Atendimento</a>
               <li>
                 <img
                   class="icone-img"
@@ -202,11 +203,5 @@
         </div>
       </div>
     </footer>
-    <div class="btn-top" id="btnTop">
-      <img
-        src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/arrow-up-square.svg?v=1697250793618"
-        alt="Seta para cima"
-      />
-    </div>
   </body>
 </html>
