🔑🏃 Checkpoint ./style.css:58483456/14 ./SolicitarVacinas.html:58483456/20 ./Solicitar.html:58483456/20

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -45,7 +45,7 @@
           <label>Nome: </label><input type="text" name="identificador" />
         </section>
         <section>
-          <label>Data de nascimento: </label><input type="datetime-local" />
+          <label>Data de nascimento: </label><input type="date" />
         </section>
 
         <section>
@@ -56,7 +56,7 @@
         </section>
         <section>
           <label>Data da consulta: </label
-          ><input type="datetime-local" name="identificador" />
+          ><input type="date" name="identificador" />
         </section>
         <section>
           <label>Descrição ou sintomas: </label
