--- a/SolicitarVacinas.html
+++ b/SolicitarVacinas.html
@@ -45,7 +45,7 @@
           <label>Nome: </label><input type="text" name="identificador" />
         </section>
         <section>
-          <label>Data de nascimento: </label><input type="datetime-local" />
+          <label>Data de nascimento: </label><input type="date" />
         </section>
 
         <section>
@@ -72,7 +72,7 @@
 
         <section>
           <label>Data requerida: </label
-          ><input type="datetime-local" name="identificador" />
+          ><input type="date" name="identificador" />
         </section>
         <section>
           <label>Notas: </label><input type="text" name="identificador" />
