🚌⭐️ Checkpoint ./index.html:58517880/65 ./style.css:58517880/305

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-section">
-          <h2>Fale Conosco</h2>
+          <h2 class="fale-conosco">Fale Conosco</h2>
           <div class="whatsapp">
             <img
               src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/whatsapp.svg?v=1697118932039"
@@ -166,7 +166,7 @@
 
         <div class="container">
           <div class="footer-section1">
-            <h2>Links Úteis</h2>
+            <h2 class="links-uteis">links uteis</h2>
             <ul>
               <li>
                 <img
