--- a/cadastro.html
+++ b/cadastro.html
@@ -68,7 +68,7 @@
 
         <section>
           <label for="genero">Gênero: </label>
-          <div class="select-container">
+          <div>
             <select id="genero" name="genero" required>
               <option value="" disabled selected>Selecione</option>
               <option value="masculino">Masculino</option>
