🍁🗃 Checkpoint ./cadastro.html:58483456/25 ./script.js:58483462/657 ./style.css:58483456/129

--- a/cadastro.html
+++ b/cadastro.html
@@ -68,7 +68,7 @@
 
         <section>
           <label for="genero">Gênero: </label>
-          <div>
+          <div class="select-container">
             <select id="genero" name="genero" required>
               <option value="" disabled selected>Selecione</option>
               <option value="masculino">Masculino</option>
