🐢🎈 Checkpoint ./script.js:58483462/7191 ./solicitacoes.html:58483462/45 ./style.css:58483462/113

--- a/solicitacoes.html
+++ b/solicitacoes.html
@@ -36,7 +36,8 @@
       </div>
     </header>
     <conteiner>
-      
+      <div id="listaUsuarios">
+      </div>
     </conteiner>
   </body>
 </html>
