🍴🚗 Checkpoint ./style.css:58483452/345 ./index.html:58517880/366

--- a/index.html
+++ b/index.html
@@ -198,6 +198,14 @@
                 <a href="cadastro.html">Seja Nosso Cliente </a>
               </li>
             </ul>
+              <li>
+                <img
+                  class="icone-img"
+                  src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
+                  alt="seta"
+                />
+                <a href="solicitacoes.html">Solicitações</a>
+              </li>
           </div>
         </div>
       </div>
