🌱⛱ Checkpoint ./Solicitar.html:58517880/8 ./script.js:58517880/302

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -40,7 +40,7 @@
         <h1>Solicitar Atendimento</h1>
       </div>
 
-      <form>
+      <form id="01">
         <section>
           <label>Nome: </label><input type="text" name="identificador" />
         </section>
