--- a/solicitacoes.html
+++ b/solicitacoes.html
@@ -36,6 +36,9 @@
       </div>
     </header>
     <conteiner>
+      <button onclick="obterDados()">
+        <a>Mostrar agendamentos</a>
+      </button>
       <div id="listaUsuarios">
       </div>
     </conteiner>
